Prepare Minecraft repo re-foundation structure
- replace repo guidance for Minecraft super-platform work
- add lightweight boundary README files
- document bindings, platform, contracts, and integration areas
- preserve old source as migration reference
- keep Fabric implementation and dependency rewiring deferred